@@ -1,25 +1,26 @@
 # Copyright 2000-2002 Daniel Robbins, Gentoo Technologies, Inc.
 # Contains system settings for Portage system
 
-# Download sites
-
-# The main Gentoo Linux source mirror; specify as many space-separated mirrors
-# as you like.
+# Download sites: The main Gentoo Linux source mirror; specify as many
+# space-separated mirrors as you like.
 GENTOO_MIRRORS="http://www.ibiblio.org/pub/Linux/distributions/gentoo"
+
 # The main Gentoo Linux Portage server; specify a single Portage server.
 #SYNC="rsync://rsync.gentoo.org/gentoo-portage"
-# An alternate download server if you prefer anoncvs.  emerge dev-util/cvs
-# for cvs support in emerge.  The password for this CVS server is empty --
-# just hit Enter.
-#SYNC="cvs://:pserver:anonymous@gentoo.org:/home/anoncvs"
+
+# If you want/need rsync to use an HTTP proxy to make its connections, set
+# the RSYNC_PROXY proxy variable in root's .bashrc or /etc/profile.  It's
+# best to enable globally since then all rsync calls on your system will
+# take advantage of your proxy.
 
 # Build-time functionality
 
 # USE=""
-# USE options are inherited from /etc/make.profile/make.defaults.  To turn a USE
-# setting off, add a "-setting" to the USE variable here.  To enable a setting,
-# add the setting name to the USE variable here.  Separate USE toggles with 
-# whitespace.
+
+# USE options are inherited from /etc/make.profile/make.defaults.  To turn a
+# USE setting off, add a "-setting" to the USE variable here.  To enable a
+# setting, add the setting name to the USE variable here.  Separate USE toggles
+# with whitespace.
 
 # Host-specific settings
 
@@ -46,15 +47,12 @@ CHOST="powerpc-unknown-linux-gnu"
 CFLAGS=" -O2 -pipe -mmultiple -mstring "
 CXXFLAGS=${CFLAGS}
 
-#proxy settings PROXY(both), or HTTP_PROXY/FTP_PROXY
-#PROXY=freebox.gentoo.org:3128
-#HTTP_PROXY=
-#FTP_PROXY=
-
-# Uncomment to use Lukemftp for download
-# you need to merge lukemftp first!
-#FETCHCOMMAND='/usr/bin/lukemftp -s -a -o ${DISTDIR}/${FILE} ${URI}'
-#RESUMECOMMAND='/usr/bin/lukemftp -s -a -R -o ${DISTDIR}/${FILE} ${URI}'
+# If you need to set a proxy for wget or lukemftp, add the appropriate
+# "export ftp_proxy=<proxy>" and "export http_proxy=<proxy>" lines to
+# /etc/profile if all users on your system should use them.
+# Uncomment to use Lukemftp for download; you need to merge lukemftp first.
+#FETCHCOMMAND="/usr/bin/lukemftp -s -a -o \${DISTDIR}/\${FILE} \${URI}"
+#RESUMECOMMAND="usr/bin/lukemftp -s -a -R -o \${DISTDIR}/\${FILE} \${URI}"
 
 # Uncomment if you wanna use Prozilla for download
 # you need to merge prozilla first!
