@@ -2,10 +2,6 @@
 # System-wide defaults for the Portage system
 
 USE_ORDER="env:conf:auto:defaults"
-#proxy settings PROXY(both), or HTTP_PROXY/FTP_PROXY
-#PROXY=freebox.gentoo.org:3128
-#HTTP_PROXY=
-#FTP_PROXY=
 GENTOO_MIRRORS="http://www.ibiblio.org/pub/Linux/distributions/gentoo"
 SYNC="rsync://rsync.gentoo.org/gentoo-portage"
 # Host-type
